--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTaskManagingMaster"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".FirebaseActivity">
+        <!-- android:name=".FirebaseActivity" 當應用啟動時，系統建立 FirebaseActivity 實例，並且只執行一次 onCreate -->
         <activity
             android:name=".Register"
             android:exported="false" />
@@ -27,7 +29,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
